[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Target.gd" type="Script" id=2]
[ext_resource path="res://Lightmaps/radial.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.2616, 48.2461 )

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="Target" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="2"]
wait_time = 3.0

[node name="AssasinateArea" type="Area2D" parent="." index="3"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AssasinateArea" index="0"]
shape = SubResource( 1 )

[node name="Torch" type="Sprite" parent="." index="4"]
modulate = Color( 1, 1, 1, 0.294118 )
material = SubResource( 2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="AssasinateArea" to="." method="_on_AssasinateArea_body_entered"]
[connection signal="body_exited" from="AssasinateArea" to="." method="_on_AssasinateArea_body_exited"]
